--- a/Scripts/Editor/UnityProjectEx.Editor.asmdef
+++ b/Scripts/Editor/UnityProjectEx.Editor.asmdef
@@ -2,7 +2,10 @@
     "name": "UnityProjectEx.Editor",
     "rootNamespace": "UnityProjectEx.Editor",
     "references": ["GUID:5d0595cabca3f65418ec01a472735d07",
-"GUID:626cca1954403c942aaa892ce194af26"],
+"GUID:626cca1954403c942aaa892ce194af26",
+"GUID:15fc0a57446b3144c949da3e2b9737a9",
+"GUID:457756d89b35d2941b3e7b37b4ece6f1",
+"GUID:df380645f10b7bc4b97d4f5eb6303d95"],
     "includePlatforms": [
         "Editor"
     ],
@@ -12,6 +15,17 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.render-pipelines.high-definition",
+            "expression": "",
+            "define": "HDRP"
+        },
+        {
+            "name": "com.unity.render-pipelines.universal",
+            "expression": "",
+            "define": "URP"
+        }
+    ],
     "noEngineReferences": false
 }
