--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "org.pcsoft.project-ex",
-  "version": "1.3.0",
+  "version": "1.3.0-EA.01",
   "displayName": "Project Extension for Unity",
   "description": "Extension for Unity for better project handling.",
   "unity": "2021.1",
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "org.pcsoft.editor-ex": "1.1.7",
-    "org.pcsoft.common-ex": "1.1.4"
+    "org.pcsoft.common-ex": "1.1.4",
+    "org.pcsoft.extension": "1.6.9"
   },
   "author": {
     "name": "Pfeiffer C Soft",
