--- a/Scripts/Editor/UnityProjectEx.Editor.asmdef
+++ b/Scripts/Editor/UnityProjectEx.Editor.asmdef
@@ -1,17 +1,19 @@
 {
     "name": "UnityProjectEx.Editor",
     "rootNamespace": "UnityProjectEx.Editor",
-    "references": ["GUID:5d0595cabca3f65418ec01a472735d07",
-"GUID:626cca1954403c942aaa892ce194af26",
-"GUID:15fc0a57446b3144c949da3e2b9737a9",
-"GUID:457756d89b35d2941b3e7b37b4ece6f1",
-"GUID:df380645f10b7bc4b97d4f5eb6303d95",
-"GUID:7e0e70507eb6bf44e9f9fd2a3026ac35"],
+    "references": [
+        "GUID:5d0595cabca3f65418ec01a472735d07",
+        "GUID:626cca1954403c942aaa892ce194af26",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9",
+        "GUID:457756d89b35d2941b3e7b37b4ece6f1",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:7e0e70507eb6bf44e9f9fd2a3026ac35"
+    ],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
